--- a/index.html
+++ b/index.html
@@ -2,11 +2,23 @@
 <html lang="en-US">
 	<head>
 		<meta charset="utf-8">
-		<title>Chuk joke</title>
+		<title>Random Quote Machine</title>
 	</head>
 	<body>
-		<button id="get-joke">Random joke</button>
-		<p id="joke"></p>
+		<main>
+    		<header>
+        		<h1>Random quote machine</h1>
+    		</header>
+    		<div class="box">
+        		<h2 class="quote"></h2>
+        		<h3 class="author"></h3>
+    		</div>
+    		<div>
+        		<button class="trigger"> Random quote </button>
+        		<a href="#" target="_blank" class="tweet"><i class="fa fa-lg fa-twitter"></i> Tweet</a>
+    		</div>
+		</main>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script type="text/javascript" src="js/scripts.js"></script>
 	</body>
 </html>
