--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Random Quote Machine</title>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
 		<main>
@@ -13,9 +15,9 @@
         		<h2 class="quote"></h2>
         		<h3 class="author"></h3>
     		</div>
-    		<div>
+    		<div class="buttons">
         		<button class="trigger"> Random quote </button>
-        		<a href="#" target="_blank" class="tweet"><i class="fa fa-lg fa-twitter"></i> Tweet</a>
+        		<a href="#" target="_blank" class="tweet"><button><i class="fa fa-lg fa-twitter"></i> Tweet</button></a>
     		</div>
 		</main>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
